2025-08-27T12:42:37Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17267013582 # 1186
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-27
* notice: last 14d: unq all: 43 82
* notice: prev accum: outdated-unq outdated-all / unq all: 4590 9425 / 4657 9505
* notice: next accum: outdated-unq outdated-all / unq all: 4594 9429 / 4662 9511
* notice: prev exec diff / last date diff / accum: unq all: +5 +6 -0 -0 / +5 +6 -0 -0 / 5 6
* notice: removed / changed dates: [2025-08-13] / [2025-08-27]

2025-08-27T01:41:43Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17254946669 # 1185
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-27
* notice: last 14d: unq all: 42 79
* notice: prev accum: outdated-unq outdated-all / unq all: 4590 9425 / 4655 9502
* notice: next accum: outdated-unq outdated-all / unq all: 4590 9425 / 4657 9505
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -1 -1 / +7 +9 -0 -0 / 7 9
* notice: removed / changed dates: [] / [2025-08-13 2025-08-26]

2025-08-26T12:47:07Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17238587886 # 1184
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-26
* notice: last 14d: unq all: 40 77
* notice: prev accum: outdated-unq outdated-all / unq all: 4589 9424 / 4650 9496
* notice: next accum: outdated-unq outdated-all / unq all: 4590 9425 / 4655 9502
* notice: prev exec diff / last date diff / accum: unq all: +5 +6 -0 -0 / +5 +6 -0 -0 / 5 6
* notice: removed / changed dates: [2025-08-12] / [2025-08-26]

2025-08-26T01:44:47Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17225515811 # 1183