@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-08-27T12:42:37Z",
-  "count" : 6,
-  "count_minmax" : [ 6, 6 ],
-  "count_decinc" : [ -0, +6 ],
-  "uniques" : 5,
-  "uniques_minmax" : [ 5, 5 ],
-  "uniques_decinc" : [ -0, +5 ]
+  "timestamp" : "2025-08-28T01:41:04Z",
+  "count" : 11,
+  "count_minmax" : [ 6, 11 ],
+  "count_decinc" : [ -0, +11 ],
+  "uniques" : 8,
+  "uniques_minmax" : [ 5, 8 ],
+  "uniques_decinc" : [ -0, +8 ]
 }
