@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-08-27T12:42:37Z",
-  "count_outdated" : 9429,
-  "uniques_outdated" : 4594,
-  "count" : 9511,
-  "uniques" : 4662,
+  "timestamp" : "2025-08-28T01:41:04Z",
+  "count_outdated" : 9430,
+  "uniques_outdated" : 4595,
+  "count" : 9516,
+  "uniques" : 4665,
   "clones" : [
-    {
-      "timestamp": "2025-08-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-08-15T00:00:00Z",
       "count": 2,
@@ -124,12 +115,12 @@
     },
     {
       "timestamp": "2025-08-27T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 6, 6 ],
-      "count_decinc": [ 0, 6 ],
-      "uniques": 5,
-      "uniques_minmax": [ 5, 5 ],
-      "uniques_decinc": [ 0, 5 ]
+      "count": 11,
+      "count_minmax": [ 6, 11 ],
+      "count_decinc": [ 0, 11 ],
+      "uniques": 8,
+      "uniques_minmax": [ 5, 8 ],
+      "uniques_decinc": [ 0, 8 ]
     }
   ]
 }
