@@ -1,3 +1,12 @@
+2025-08-28T01:41:04Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17283281847 # 1187
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-28
+* notice: last 14d: unq all: 44 86
+* notice: prev accum: outdated-unq outdated-all / unq all: 4594 9429 / 4662 9511
+* notice: next accum: outdated-unq outdated-all / unq all: 4595 9430 / 4665 9516
+* notice: prev exec diff / last date diff / accum: unq all: +3 +5 -0 -0 / +8 +11 -0 -0 / 8 11
+* notice: removed / changed dates: [2025-08-14] / [2025-08-27]
+
 2025-08-27T12:42:37Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17267013582 # 1186
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-27
